envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    # Envoy's own balancer of worker threads
    #connection_balance_config:
    #  exact_balance: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # Downstream Connection Idle Timeout (default: 1h):
          #common_http_protocol_options:
          #  idle_timeout: 100s
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.http_cache_rc          # before envoy.router because order matters!
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.http_cache_rc.Codec
              ring_buffer_capacity: 512                     # number of blocks (1 block == 64B)
              cache_capacity: 1024                          # number of entries
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: www.envoyproxy.io
                  cluster: service_envoyproxy_io
                  # Response Timeout (default: 15s):
                  # Adjust the value for testing upstream request timeout (lowest value: 0.001s)
                  #timeout: 0.001s

  clusters:
  - name: service_envoyproxy_io
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    # Upstream Connection Idle Timeout (default: 1h):
    #common_http_protocol_options:
    #  idle_timeout: 100s
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
        
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8111
